--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <div class="md:w-1/2">
 <h2 class="text-3xl md:text-5xl font-playfair mb-6 gold-text">The Loyalty Ethos</h2>
 <p class="mb-4 text-lg text-gray-200">From Flint, Michigan to the national stage, Blannon "B.I." Campbell built his reputation on one unbreakable code: <span class="gold-text font-semibold">Loyalty Is Everything</span>.</p>
-<p class="mb-4 text-lg text-gray-300">He is the trusted personal point of contact for champions and icons—including Draymond Green, Ghostface Killah, and the inner circle surrounding LeBron James. Whether it is moving with the Warriors during a title run or mapping an artist's comeback, B.I. keeps doors open and moments unforgettable.</p>
+                    <p class="mb-4 text-lg text-gray-300">He is the trusted personal point of contact for champions and icons—from NBA inner circles to hip-hop royalty. Whether it is moving with the Warriors during a title run or mapping an artist's comeback, B.I. keeps doors open and moments unforgettable.</p>
 <p class="text-lg text-gray-300">Every introduction is intentional, every experience curated. If you need someone who can operate at the speed of culture while honoring every relationship, you need B.I.</p>
 <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 mt-8">
 <div class="surface-panel p-4 rounded-lg border border-gray-800 text-center">
@@ -220,23 +220,23 @@
 <div class="container mx-auto px-6">
 <h2 class="text-3xl md:text-5xl font-playfair mb-12 text-center gold-text">Trusted Across The Spotlight</h2>
 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-<div class="surface-panel-soft rounded-xl border border-gray-800 p-8 hover:gold-border transition-all hover-scale">
-<div class="text-sm uppercase tracking-[0.4em] text-gray-500 mb-4">NBA</div>
-<h3 class="text-2xl font-playfair mb-3 gold-text">Draymond Green</h3>
-<p class="text-gray-300 text-sm leading-relaxed">Day-to-day consigliere during championship runs—coordinating appearances, managing brand activations, and protecting the inner circle.</p>
-</div>
-<div class="surface-panel-soft rounded-xl border border-gray-800 p-8 hover:gold-border transition-all hover-scale">
-<div class="text-sm uppercase tracking-[0.4em] text-gray-500 mb-4">Wu-Tang Clan</div>
-<h3 class="text-2xl font-playfair mb-3 gold-text">Ghostface Killah</h3>
-<p class="text-gray-300 text-sm leading-relaxed">Architect of headline shows and luxury hospitality touchpoints—ensuring fans, partners, and family experience the legend up close.</p>
-</div>
-<div class="surface-panel-soft rounded-xl border border-gray-800 p-8 hover:gold-border transition-all hover-scale">
-<div class="text-sm uppercase tracking-[0.4em] text-gray-500 mb-4">Culture</div>
-<h3 class="text-2xl font-playfair mb-3 gold-text">LeBron &amp; Friends</h3>
-<p class="text-gray-300 text-sm leading-relaxed">Part of the trusted network that navigates VIP logistics, charity moments, and private celebrations for basketball's most influential circle.</p>
-</div>
-</div>
-</div>
+                <div class="surface-panel-soft rounded-xl border border-gray-800 p-8 hover:gold-border transition-all hover-scale">
+                    <div class="text-sm uppercase tracking-[0.4em] text-gray-500 mb-4">NBA</div>
+                    <h3 class="text-2xl font-playfair mb-3 gold-text">NBA Inner Circle</h3>
+                    <p class="text-gray-300 text-sm leading-relaxed">Day-to-day consigliere during championship runs—coordinating appearances, managing brand activations, and protecting the inner circle.</p>
+                </div>
+                <div class="surface-panel-soft rounded-xl border border-gray-800 p-8 hover:gold-border transition-all hover-scale">
+                    <div class="text-sm uppercase tracking-[0.4em] text-gray-500 mb-4">Wu-Tang Clan</div>
+                    <h3 class="text-2xl font-playfair mb-3 gold-text">Hip-Hop Dynasty</h3>
+                    <p class="text-gray-300 text-sm leading-relaxed">Architect of headline shows and luxury hospitality touchpoints—ensuring fans, partners, and family experience the legend up close.</p>
+                </div>
+                <div class="surface-panel-soft rounded-xl border border-gray-800 p-8 hover:gold-border transition-all hover-scale">
+                    <div class="text-sm uppercase tracking-[0.4em] text-gray-500 mb-4">Culture</div>
+                    <h3 class="text-2xl font-playfair mb-3 gold-text">Global Icons Collective</h3>
+                    <p class="text-gray-300 text-sm leading-relaxed">Part of the trusted network that navigates VIP logistics, charity moments, and private celebrations for basketball's most influential circle.</p>
+                </div>
+            </div>
+        </div>
 </section>
 <!-- Moments Section -->
 <section class="relative py-20 z-10" id="moments">
