--- a/index.html
+++ b/index.html
@@ -308,36 +308,50 @@
 <div class="container mx-auto px-6 max-w-4xl">
 <h2 class="text-3xl md:text-5xl font-playfair mb-16 text-center gold-text">Connect</h2>
 <div class="surface-panel-soft p-8 md:p-12 rounded-lg border border-gray-800">
-<p class="text-center mb-8 text-lg">For strategic inquiries and partnership opportunities, reach out through your preferred channel.</p>
+<div class="text-center mb-10 space-y-2">
+<p class="text-lg">For strategic inquiries, elite bookings, and partnership opportunities, connect directly with Blannon.</p>
+<p class="text-2xl font-playfair">Blannon Campbell</p>
+<p class="uppercase text-xs tracking-[0.35em] text-gray-400">L.I.E. Management · Bookings · Event Planning · Global Concierge</p>
+<div class="flex flex-col md:flex-row items-center justify-center gap-2 text-gray-300 text-sm">
+<a class="hover:gold-text transition-colors" href="tel:8327680159">Mobile: 832-768-0159</a>
+<span class="hidden md:inline text-gray-600">|</span>
+<a class="hover:gold-text transition-colors" href="mailto:blannon@loyaltyiseverything.org">blannon@loyaltyiseverything.org</a>
+</div>
+</div>
 <div class="flex flex-wrap justify-center gap-6 mb-12">
-<a aria-label="Email B.I." class="w-12 h-12 rounded-full border border-gray-700 flex items-center justify-center hover:gold-border hover-scale transition-all" href="mailto:connect@loyaltyiseverything.com">
+<a aria-label="Email Blannon Campbell" class="w-12 h-12 rounded-full border border-gray-700 flex items-center justify-center hover:gold-border hover-scale transition-all" href="mailto:blannon@loyaltyiseverything.org">
 <i class="gold-text" data-feather="mail"></i>
 </a>
-<a aria-label="LinkedIn profile" class="w-12 h-12 rounded-full border border-gray-700 flex items-center justify-center hover:gold-border hover-scale transition-all" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank">
+<a aria-label="LinkedIn profile" class="w-12 h-12 rounded-full border border-gray-700 flex items-center justify-center hover:gold-border hover-scale transition-all" href="https://www.linkedin.com/in/blannon-campbell-546b5740/" rel="noopener noreferrer" target="_blank">
 <i class="gold-text" data-feather="linkedin"></i>
 </a>
-<a aria-label="Twitter profile" class="w-12 h-12 rounded-full border border-gray-700 flex items-center justify-center hover:gold-border hover-scale transition-all" href="https://twitter.com" rel="noopener noreferrer" target="_blank">
+<a aria-label="Facebook profile" class="w-12 h-12 rounded-full border border-gray-700 flex items-center justify-center hover:gold-border hover-scale transition-all" href="https://www.facebook.com/blannon.campbell" rel="noopener noreferrer" target="_blank">
+<i class="gold-text" data-feather="facebook"></i>
+</a>
+<a aria-label="X profile" class="w-12 h-12 rounded-full border border-gray-700 flex items-center justify-center hover:gold-border hover-scale transition-all" href="https://x.com/bcamp810" rel="noopener noreferrer" target="_blank">
 <i class="gold-text" data-feather="twitter"></i>
 </a>
 <a aria-label="Instagram profile" class="w-12 h-12 rounded-full border border-gray-700 flex items-center justify-center hover:gold-border hover-scale transition-all" href="https://www.instagram.com/loyaltyiseverything810/" rel="noopener noreferrer" target="_blank">
 <i class="gold-text" data-feather="instagram"></i>
 </a>
 </div>
-<form class="space-y-6">
+<form class="space-y-6" data-webhook="https://hook.us2.make.com/cqvkivq4e441ty4q7s5n44vlp3na9lxr" id="contact-form">
 <div>
 <label class="block mb-2" for="name">Name</label>
-<input class="w-full bg-gray-900 border border-gray-800 rounded px-4 py-3 focus:outline-none focus:gold-border" id="name" type="text"/>
+<input class="w-full bg-gray-900 border border-gray-800 rounded px-4 py-3 focus:outline-none focus:gold-border" id="name" name="name" placeholder="Your name" required type="text"/>
 </div>
 <div>
 <label class="block mb-2" for="email">Email</label>
-<input class="w-full bg-gray-900 border border-gray-800 rounded px-4 py-3 focus:outline-none focus:gold-border" id="email" type="email"/>
+<input class="w-full bg-gray-900 border border-gray-800 rounded px-4 py-3 focus:outline-none focus:gold-border" id="email" name="email" placeholder="name@email.com" required type="email"/>
 </div>
 <div>
 <label class="block mb-2" for="message">Message</label>
-<textarea class="w-full bg-gray-900 border border-gray-800 rounded px-4 py-3 focus:outline-none focus:gold-border" id="message" rows="5"></textarea>
+<textarea class="w-full bg-gray-900 border border-gray-800 rounded px-4 py-3 focus:outline-none focus:gold-border" id="message" name="message" placeholder="How can B.I. support this moment?" required rows="5"></textarea>
 </div>
-<button class="gold-gradient text-black px-8 py-3 rounded font-semibold hover:opacity-90 transition-opacity" type="submit">Send Message</button>
+<button class="gold-gradient text-black px-8 py-3 rounded font-semibold hover:opacity-90 transition-opacity w-full md:w-auto" type="submit">Send Message</button>
+<p class="text-sm text-gray-400 text-center hidden" id="form-status" role="status"></p>
 </form>
+<p class="text-xs text-center text-gray-500 mt-4">Update the form&apos;s <code>data-webhook</code> value with your Make webhook URL to route submissions instantly.</p>
 </div>
 </div>
 </section>
@@ -405,6 +419,71 @@
             document.addEventListener('visibilitychange', () => {
                 if (!document.hidden) {
                     attemptPlay();
+                }
+            });
+        }
+
+        // Contact form submission routed through Make webhook
+        const contactForm = document.getElementById('contact-form');
+        const formStatus = document.getElementById('form-status');
+        if (contactForm && formStatus) {
+            contactForm.addEventListener('submit', async (event) => {
+                event.preventDefault();
+
+                const submitButton = contactForm.querySelector('button[type="submit"]');
+                const webhookUrl = contactForm.dataset.webhook || '';
+                const payload = {
+                    name: contactForm.name.value.trim(),
+                    email: contactForm.email.value.trim(),
+                    message: contactForm.message.value.trim(),
+                    submittedAt: new Date().toISOString()
+                };
+
+                formStatus.classList.remove('hidden', 'text-green-400', 'text-red-400', 'text-gray-300');
+
+                if (!payload.name || !payload.email || !payload.message) {
+                    formStatus.textContent = 'Please complete every field before sending.';
+                    formStatus.classList.add('text-red-400');
+                    return;
+                }
+
+                if (!webhookUrl || webhookUrl.includes('REPLACE_WITH_WEBHOOK')) {
+                    formStatus.textContent = 'Add your Make webhook URL to the form to activate message routing.';
+                    formStatus.classList.add('text-red-400');
+                    return;
+                }
+
+                try {
+                    if (submitButton) {
+                        submitButton.disabled = true;
+                        submitButton.classList.add('opacity-70');
+                    }
+                    formStatus.textContent = 'Sending...';
+                    formStatus.classList.add('text-gray-300');
+
+                    const response = await fetch(webhookUrl, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(payload)
+                    });
+
+                    if (!response.ok) {
+                        throw new Error('Webhook returned an error');
+                    }
+
+                    formStatus.textContent = 'Message sent. Expect a reply from Blannon soon.';
+                    formStatus.classList.remove('text-gray-300');
+                    formStatus.classList.add('text-green-400');
+                    contactForm.reset();
+                } catch (error) {
+                    formStatus.textContent = 'Could not deliver your note. Please try again or email blannon@loyaltyiseverything.org directly.';
+                    formStatus.classList.remove('text-gray-300');
+                    formStatus.classList.add('text-red-400');
+                } finally {
+                    if (submitButton) {
+                        submitButton.disabled = false;
+                        submitButton.classList.remove('opacity-70');
+                    }
                 }
             });
         }
